--- a/MyFirstOpenGL/MyFirstOpenGL.vcxproj.filters
+++ b/MyFirstOpenGL/MyFirstOpenGL.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="MyFirstOpenGL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DrawingObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LineObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MyTime.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawingObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LineObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
